@@ -2,6 +2,7 @@ Revision history for WebService-XING
 
 0.002	2012-04-01
     - Documentation fixes.
+    - Remove WebService::XING::Error.
 
 0.001	2012-04-01
     - First version (no April Fool's joke)
